<resources>
    <string name="app_name">MagisterNative23</string>
    <string name="data_check">Data Check</string>
    <string name="check_photos">Check photos</string>
    <string name="check_contacts">Check contacts</string>
    <string name="check_msg">Check messages</string>
    <string name="camera_check">Camera check</string>
    <string name="front_camera">Front camera</string>
    <string name="back_camera">Back camera</string>
    <string name="unavailable">Unavailable</string>
    <string name="sent">Sent</string>
    <string name="available">Available</string>
    <string name="ok">Ok</string>
    <string name="check_permissions">Check permissions</string>
    <string name="picture">Picture</string>
    <string name="description_info">Description</string>
    <string name="request_permission">Request permission</string>
    <string name="camera_error">Camera error</string>
    <string name="intro_message">siems</string>
</resources>
