<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pl.com.imralav.magisternative23.DataAccessCheckActivity">

    <RelativeLayout
        android:id="@+id/navigationPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/data_check" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:onClick="goToCameraCheck"
            android:src="@android:drawable/ic_menu_camera" />
    </RelativeLayout>

    <Button
        android:id="@+id/checkPermissionsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="checkPermissions"
        android:text="@string/check_permissions"
        android:textAllCaps="false"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>

    <RelativeLayout
        android:id="@+id/accessCheckTable"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/navigationPanel"
        android:layout_above="@id/checkPermissionsButton"
        android:padding="16dp">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textAlignment="center">

            <TableRow
                android:id="@+id/checkPhotosRow"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginBottom="16dp">

                <Button
                    android:id="@+id/checkPhotosButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="checkPhotos"
                    android:text="@string/check_photos"
                    android:textAllCaps="false" />

                <TextView
                    android:id="@+id/checkPhotosStatusText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:drawableStart="@android:drawable/ic_menu_help"
                    android:drawablePadding="5dp"
                    android:gravity="center_vertical" />
            </TableRow>

            <TableRow
                android:id="@+id/checkContactsRow"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginBottom="16dp">

                <Button
                    android:id="@+id/checkContactsButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="checkContacts"
                    android:text="@string/check_contacts"
                    android:textAllCaps="false" />

                <TextView
                    android:id="@+id/checkContactsStatusText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:drawableStart="@android:drawable/ic_menu_help"
                    android:drawablePadding="5dp"
                    android:gravity="center_vertical" />
            </TableRow>

            <TableRow
                android:id="@+id/checkMsgRow"
                android:layout_width="0dp"
                android:layout_height="0dp">

                <Button
                    android:id="@+id/checkMsgButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/check_msg"
                    android:textAllCaps="false"
                    android:onClick="checkMessages"/>

                <TextView
                    android:id="@+id/checkMsgStatusText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:drawableStart="@android:drawable/ic_menu_help"
                    android:drawablePadding="5dp"
                    android:gravity="center_vertical" />
            </TableRow>
        </TableLayout>
    </RelativeLayout>

</RelativeLayout>
